--- a/pom.xml
+++ b/pom.xml
@@ -8,19 +8,15 @@
 		<version>2.7.8</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.gds.challenge</groupId>
-	<artifactId>gds-swe-be</artifactId>
+	<groupId>com.challenge</groupId>
+	<artifactId>gds-swe-challenge-be</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>gds-swe-be</name>
-	<description>Be for GDS-SWE-Challenge</description>
+	<name>gds-swe-challenge-be</name>
+	<description>BE for challenge</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
