--- a/pom.xml
+++ b/pom.xml
@@ -29,9 +29,9 @@
 		</dependency>
 		
 		<dependency>
-			<groupId>com.opencsv</groupId>
-    		<artifactId>opencsv</artifactId>
-    		<version>5.0</version>
+	        <groupId>org.apache.commons</groupId>
+	        <artifactId>commons-csv</artifactId>
+	        <version>1.8</version>
 		</dependency>
 
 		<dependency>
